[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/first_run.gd" id="1_script"]

[node name="FirstRun" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -44.0
offset_right = 100.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="DemoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "DEMO"

[node name="AddButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ADD"

[connection signal="pressed" from="VBoxContainer/DemoButton" to="." method="_on_demo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]